# Superbotd

aether_fast_core/: Cargo.toml
aether_fast_core/src/: lib.rs
config/: secrets.env
